# production-rag-system

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: eval.yml
data/: sample.txt
eval/: eval_data.json  regression_gate.py  test_observability.py  test_rag.py
src/: audit.py  auth.py  config.py  conversations.py  generate.py  ingest.py  metrics_store.py  observability.py  retrieve.py
